iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_5_oss1.local_39.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405f524ba8606d342758f3bdc408",
    "scsi80": "SLIO-ORG ost13           f524ba86-06d3-4275-8f3b-dc408963d414",
    "major": "65",
    "minor": "16",
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:12/block/sdr",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "5181424171968628276",
    "fs_label": "ost4",
    "paths": [
      "/dev/disk/by-id/scsi-36001405f524ba8606d342758f3bdc408",
      "/dev/disk/by-id/wwn-0x6001405f524ba8606d342758f3bdc408",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-12",
      "/dev/disk/by-label/ost4",
      "/dev/disk/by-uuid/5181424171968628276",
      "/dev/sdr"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-8",
          "serial": "36001405f524ba8606d342758f3bdc408",
          "scsi80": "SLIO-ORG ost13           f524ba86-06d3-4275-8f3b-dc408963d414",
          "dm_name": "mpathe",
          "size": 5368709120,
          "major": "253",
          "minor": "8",
          "filesystem_type": "zfs_member",
          "fs_uuid": "5181424171968628276",
          "fs_label": "ost4",
          "paths": [
            "/dev/mapper/mpathe",
            "/dev/disk/by-id/dm-name-mpathe",
            "/dev/disk/by-id/dm-uuid-mpath-36001405f524ba8606d342758f3bdc408",
            "/dev/disk/by-label/ost4",
            "/dev/disk/by-uuid/5181424171968628276",
            "/dev/dm-8"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 5181424171968628276,
                "name": "ost4",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 9368686158996284700,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpathe",
                          "dev_id": "dm-uuid-mpath-36001405f524ba8606d342758f3bdc408",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 13325384671627309981,
                      "name": "ost4/ost4",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost4/ost4"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1592914478"
                        },
                        {
                          "name": "used",
                          "value": "3620352"
                        },
                        {
                          "name": "available",
                          "value": "5164687872"
                        },
                        {
                          "name": "referenced",
                          "value": "3620352"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost4/ost4"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "11"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "13325384671627309981"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3620352"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3620352"
                        },
                        {
                          "name": "logicalused",
                          "value": "1828864"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1828864"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:index",
                          "value": "4"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.22@tcp"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST0004"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "ost4",
                  "target": "/ost4",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
